[package]
name = "rdu"
version = "0.1.0"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
humansize = "2.1.3"
tokio = { version = "1", features = ["full"] }
mimalloc = {version = "0.1", optional = true}
#tokio-stream = { version = "0.1", features = ["fs"] }
#futures = "0.3"

[features]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1
